Fix whitespacing in about section to be centered instead of left aligned

--- a/client/src/home/home.less
+++ b/client/src/home/home.less
@@ -66,7 +66,7 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
-  margin: auto 0;
+  margin: 0 auto;
 
   &-picContainer {
     text-align: center;
